2007-05-10 Benny Malengier <bm@cage.ugent.be>
	* src/GrampsDb/_ReadXML.py: partly fix #1053, import privacy of person, family,
        media, source, place and repo correct. Still to do: sourceref and lds_ordinance
        Correct error in person name privacy

2007-05-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Some rendering fixes for RTL locales

2007-05-09  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py (GedcomParser.func_name_aka): patch submitted
	on bug tracker for AKA parameter missing (#1034)

2007-05-09 Benny Malengier <bm@cage.ugent.be>
	* src/glade/gramps.glade: fix #797

2007-05-09 Benny Malengier <bm@cage.ugent.be>
	* src/glade/gramps.glade: fix #796

2007-05-08  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py (ChildEmbedList): Sort by the proper column
	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBookmarks.insert): fix
	bookmark insertion (#1050)

2007-05-08  Brian Matherly  <brian@gramps-project.org>
    * src/plugins/NarrativeWeb.py: Change the default directory so people don't
      generate the report in their database directory.

2007-05-06  Brian Matherly  <brian@gramps-project.org>
	* src/data/main5.css: Fix generation chart alignment for Narrative Web.

2007-05-03  Benny Malengier <bm@cage.ugent.be>
       * src/plugins/rel_de.py:
	issue #0000929 , rel_de.py

2007-04-27  Brian Matherly  <brian@gramps-project.org>
	* src/Filters/Rules/Person/_IsLessThanNthGenerationAncestorOfBookmarked.py:
	* src/Filters/Rules/Person/_RelationshopPathBetweenBookmarks.py:
    Fix bookmark errors.

2007-04-27  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/BookReport.py: Fix escape error.

2007-04-27  Brian Matherly  <brian@gramps-project.org>
	* src/DbLoader.py: Fix exception message.

2007-04-22  Don Allingham  <don@gramps-project.org>
	* configure.in: bump to full release of 2.2.7
	* src/const.py.in: fix 2007 in copyright
	* NEWS: update news file
