@@ -20,148 +20,153 @@
 
 # $Id$
 
-#-------------------------------------------------------------------------
-#Updated LDS Temple Codes from:
-#http://www.geocities.com/rgpassey/temple/abclist.htm
-#Confirmed against Temple Codes list recieved from Raliegh Temple
-#Last update: 1/12/02
-#-------------------------------------------------------------------------
 temples = (
-    # Temple Name                 , Code   , [Old Codes...]
-    ("Aba, Nigeria"               , "ABA",   ),
-    ("Accra, Ghana"               , "ACCRA", ),
-    ("Adelaide, Australia"        , "ADELA", ),
-    ("Albuquerque, New Mexico"    , "ALBUQ", ),
-    ("Anchorage, Alaska"          , "ANCHO", ),
-    ("Apia, Samoa"                , "APIA",  "AP"),
-    ("Asuncion, Paraguay"         , "ASUNC", ),
-    ("Atlanta, Georgia"           , "ATLAN", "AT"),
-    ("Baton Rouge, Louisiana"     , "BROUG", ),
-    ("Bern, Switzerland"          , "SWISS", "SW"),
-    ("Billings, Montana"          , "BILLI", ),
-    ("Birmingham, Alabama"        , "BIRMI", ),
-    ("Bismarck, North Dakota"     , "BISMA", ),
-    ("Bogota, Columbia"           , "BOGOT", "BG"),
-    ("Boise, Idaho"               , "BOISE", "BO"),
-    ("Boston, Massachusetts"      , "BOSTO", ),
-    ("Bountiful, Utah"            , "BOUNT", ),
-    ("Brisban, Australia"         , "BRISB", ),
-    ("Buenos Aires, Argentina"    , "BAIRE", "BA"),
-    ("Campinas, Brazil"           , "CAMPI", ),
-    ("Caracas, Venezuela"         , "CARAC", ),
-    ("Cardston, Alberta"          , "ALBER", "AL", "ALBR"),
-    ("Chicago, Illinois"          , "CHICA", "CH"),
-    ("Ciudad Juarez, Chihuahua"   , "CIUJU", ),
-    ("Cochabamba, Boliva"         , "COCHA", ),
-    ("Colonia Juarez, Chihuahua"  , "COLJU", ),
-    ("Columbia, South Carolina"   , "COLSC", ),
-    ("Columbia River, Washington" , "CRIVE", ),
-    ("Columbus, Ohio"             , "COLUM", ),
-    ("Copenhagen, Denmark"        , "COPEN", ),
-    ("Curitiba, Brazil"           , "CURIT", ),
-    ("Manhattan, New York"        , "MANHA", ),
-    ("Panama City, Panama"        , "PCITY", ),
-    ("Dallas, Texas"              , "DALLA", "DA"),
-    ("Denver, Colorado"           , "DENVE", "DV"),
-    ("Detroit, Michigan"          , "DETRO", ),
-    ("Edmonton, Alberta"          , "EDMON", ),
-    ("Frankfurt, Germany"         , "FRANK", "FR"),
-    ("Fresno, California"         , "FRESN", ),
-    ("Freiberg, Germany"          , "FREIB", "FD"),
-    ("Fukuoka, Japan"             , "FUKUO", ),
-    ("Guadalajara, Jalisco"       , "GUADA", ),
-    ("Guatamala City, Guatamala"  , "GUATE", "GA"),
-    ("Guayaquil, Ecuador"         , "GUAYA", "GY"),
-    ("Halifax, Noca Scotia"       , "HALIF", ),
-    ("Hamilton, New Zealand"      , "NZEAL", "NZ"),
-    ("Harrison, New York"         , "NYORK", ),
-    ("Hartford, Connecticut"      , "HARTF", ),
-    ("Helsinki, Finland"          , "HELSI", ),
-    ("Hermosillo, Sonora"         , "HERMO", ),
-    ("Hong Kong, China"           , "HKONG", ),
-    ("Houston, Texas"             , "HOUST", ),
-    ("Idaho Falls, Idaho"         , "IFALL", ),
-    ("Johannesburg, South Africa" , "JOHAN", "JO"),
-    ("Jordan River, Utah"         , "JRIVE", "JR"),
-    ("Kialua Kona, Hawaii"        , "KONA",  ),
-    ("Kiev, Ukraine"              , "KIEV",  ),
-    ("Laie, Hawaii"               , "HAWAI", "HA"),
-    ("Las Vegas, Nevada"          , "LVEGA", "LV"),
-    ("Lima, Peru"                 , "LIMA" , "LI"),
-    ("Logan, Utah"                , "LOGAN", "LG"),
-    ("London, England"            , "LONDO", "LD"),
-    ("Los Angeles, California"    , "LANGE", "LA"),
-    ("Louisville, Kentucky"       , "LOUIS", ),
-    ("Lubbock, Texas"             , "LUBBO", ),
-    ("Madrid, Spain"              , "MADRI", ),
-    ("Manila, Philippines"        , "MANIL", "MA"),
-    ("Manti, Utah"                , "MANTI", "MT"),
-    ("Medford, Oregon"            , "MEDFO", ),
-    ("Melbourne, Australia"       , "MELBO", ),
-    ("Melphis, Tennessee"         , "MEMPH", ),
-    ("Merida, Yucatan"            , "MERID", ),
-    ("Mesa, Arizona"              , "ARIZO", "AZ"),
-    ("Mexico City, Mexico"        , "MEXIC", "MX"),
-    ("Monterrey, Nuevo Leon"      , "MONTE", ),
-    ("Montevideo, Uruguay"        , "MNTVD", ),
-    ("Monticello, Utah"           , "MONTI", ),
-    ("Montreal, Quebec"           , "MONTR", ),
-    ("Mt. Timpanogos, Utah"       , "MTIMP", ),
-    ("Nashville, Tennessee"       , "NASHV", ),
-    ("Nauvoo, Illinois"           , "NAUVO", ),
-    ("Nauvoo, Illinois (New),"     , "NAUV2", ),
-    ("Newport Beach, California"  , "NBEAC", ),
-    ("Nuku'alofa, Tonga"          , "NUKUA", "TG"),
-    ("Oakland, California"        , "OAKLA", "OK"),
-    ("Oaxaca, Oaxaca"             , "OAKAC", ),
-    ("Ogden, Utah"                , "OGDEN", "OG"),
-    ("Oklahoma City, Oklahoma"    , "OKLAH", ),
-    ("Orlando, Florida"           , "ORLAN", ),
-    ("Palmayra, New York"         , "PALMY", ),
-    ("Papeete, Tahiti"            , "PAPEE", "TA"),
-    ("Perth, Australia"           , "PERTH", ),
-    ("Portland, Oregon"           , "PORTL", "PT"),
-    ("Porto Alegre, Brazil"       , "PALEG", ),
-    ("Preston, England"           , "PREST", ),
-    ("Provo, Utah"                , "PROVO", "PV"),
-    ("Raleigh, North Carolina"    , "RALEI", ),
-    ("Recife, Brazil"             , "RECIF", ),
-    ("Redlands, California"       , "REDLA", ),
-    ("Regina, Saskatchewan"       , "REGIN", ),
-    ("Reno, Nevada"               , "RENO",  ),
-    ("Sacramento, California"     , "SACRA", ),
-    ("St. George, Utah"           , "SGEOR", "SG"),
-    ("St. Louis, Missouri"        , "SLOUI", ),
-    ("St. Paul, Minnesota"        , "SPMIN", ),
-    ("Salt Lake City, Utah"       , "SLAKE", "SL"),
-    ("San Diego, California"      , "SDIEG", "SA"),
-    ("San Antonio, Texas"         , "SANTO", ),
-    ("San Jose, Costa Rica"       , "SJOSE", ),
-    ("Santiago, Chile"            , "SANTI", "SN"),
+    # Temple Name                  , Code   , [Old Codes...]
+    ("Aba, Nigeria"                , "ABA",   ),
+    ("Accra, Ghana"                , "ACCRA", ),
+    ("Adelaide, Australia"         , "ADELA", ),
+    ("Albuquerque, New Mexico"     , "ALBUQ", ),
+    ("Anchorage, Alaska"           , "ANCHO", ),
+    ("Apia, Samoa"                 , "APIA", "SAMOA", "AP"),
+    ("Asuncion, Paraguay"          , "ASUNC", ),
+    ("Atlanta, Georgia"            , "ATLAN", "AT"),
+    ("Baton Rouge, Louisiana"      , "BROUG", ),
+    ("Bern, Switzerland"           , "SWISS", "SW"),
+    ("Billings, Montana"           , "BILLI", ),
+    ("Birmingham, Alabama"         , "BIRMI", ),
+    ("Bismarck, North Dakota"      , "BISMA", ),
+    ("Bogota, Columbia"            , "BOGOT", "BG"),
+    ("Boise, Idaho"                , "BOISE", "BO"),
+    ("Boston, Massachusetts"       , "BOSTO", ),
+    ("Bountiful, Utah"             , "BOUNT", ),
+    ("Brisbane, Australia"         , "BRISB", ),
+    ("Buenos Aires, Argentina"     , "BAIRE", "BA"),
+    ("Campinas, Brazil"            , "CAMPI", ),
+    ("Caracas, Venezuela"          , "CARAC", ),
+    ("Cardston, Alberta"           , "ALBER", "AL", "ALBR"),
+    ("Cebu, Philippines"           , "CEBU",  ),
+    ("Chicago, Illinois"           , "CHICA", "CH"),
+    ("Ciudad Juarez, Mexico"       , "CIUJU", ),
+    ("Cochabamba, Boliva"          , "COCHA", ),
+    ("Colonia Juarez, Chihuahua, Mexico" , "COLJU", ),
+    ("Columbia, South Carolina"    , "COLSC", ),
+    ("Columbia River, Washington"  , "CRIVE", ),
+    ("Columbus, Ohio"              , "COLUM", ),
+    ("Copenhagen, Denmark"         , "COPEN", ),
+    ("Curitiba, Brazil"            , "CURIT", ),
+    ("Dallas, Texas"               , "DALLA", "DA"),
+    ("Denver, Colorado"            , "DENVE", "DV"),
+    ("Detroit, Michigan"           , "DETRO", ),
+    ("Draper, Utah"                , "DRAPE", ),
+    ("Edmonton, Alberta"           , "EDMON", ),
+    ("Frankfurt, Germany"          , "FRANK", "FR"),
+    ("Freiberg, Germany"           , "FREIB", "FD"),
+    ("Fresno, California"          , "FRESN", ),
+    ("Fukuoka, Japan"              , "FUKUO", ),
+    ("Guadalajara, Mexico"         , "GUADA", ),
+    ("Guatemala City, Guatemala"   , "GUATE", "GA", "GU"),
+    ("Guayaquil, Ecuador"          , "GUAYA", "GY"),
+    ("Halifax, Nova Scotia"        , "HALIF", ),
+    ("Hamilton, New Zealand"       , "NZEAL", "NZ"),
+    ("Harrison, New York"          , "HARRI", "NYORK"),
+    ("Hartford, Connecticut"       , "HARTF", ),
+    ("Helsinki, Finland"           , "HELSI", ),
+    ("Hermosillo, Sonora, Mexico"  , "HERMO", ),
+    ("Hong Kong, China"            , "HKONG", ),
+    ("Houston, Texas"              , "HOUST", ),
+    ("Idaho Falls, Idaho"          , "IFALL", "IF"),
+    ("Johannesburg, South Africa"  , "JOHAN", "JO"),
+    ("Jordan River, Utah"          , "JRIVE", "JR"),
+    ("Kona, Hawaii"                , "KONA",  ),
+    ("Kiev, Ukraine"               , "KIEV",  ),
+    ("Kirtland, Ohio"              , "KIRTL", ),
+    ("Laie, Hawaii"                , "HAWAI", "HA"),
+    ("Las Vegas, Nevada"           , "LVEGA", "LV"),
+    ("Lima, Peru"                  , "LIMA" , "LI"),
+    ("Logan, Utah"                 , "LOGAN", "LG"),
+    ("London, England"             , "LONDO", "LD"),
+    ("Los Angeles, California"     , "LANGE", "LA"),
+    ("Louisville, Kentucky"        , "LOUIS", ),
+    ("Lubbock, Texas"              , "LUBBO", ),
+    ("Madrid, Spain"               , "MADRI", ),
+    ("Manhattan, New York"         , "MANHA", ),
+    ("Manila, Philippines"         , "MANIL", "MA"),
+    ("Manti, Utah"                 , "MANTI", "MT"),
+    ("Medford, Oregon"             , "MEDFO", ),
+    ("Melbourne, Australia"        , "MELBO", ),
+    ("Memphis, Tennessee"          , "MEMPH", ),
+    ("Merida, Mexico"              , "MERID", ),
+    ("Mesa, Arizona"               , "ARIZO", "AZ"),
+    ("Mexico City, Mexico"         , "MEXIC", "MX"),
+    ("Monterrey, Mexico"           , "MONTE", ),
+    ("Montevideo, Uruguay"         , "MNTVD", ),
+    ("Monticello, Utah"            , "MONTI", ),
+    ("Montreal, Quebec"            , "MONTR", ),
+    ("Mt. Timpanogos, Utah"        , "MTIMP", ),
+    ("Nashville, Tennessee"        , "NASHV", ),
+    ("Nauvoo, Illinois"            , "NAUVO", "NV"),
+    ("Nauvoo, Illinois (New)"      , "NAUV2", ),
+    ("Newport Beach, California"   , "NBEAC", ),
+    ("Nuku'alofa, Tonga"           , "NUKUA", "TG"),
+    ("Oakland, California"         , "OAKLA", "OK"),
+    ("Oaxaca, Mexico"              , "OAXAC", ),
+    ("Ogden, Utah"                 , "OGDEN", "OG"),
+    ("Oklahoma City, Oklahoma"     , "OKLAH", ),
+    ("Oquirrh Mountain, Utah"      , "OMOUN", ),
+    ("Orlando, Florida"            , "ORLAN", ),
+    ("Palmyra, New York"           , "PALMY", ),
+    ("Panama City, Panama"         , "PANAM", ),
+    ("Papeete, Tahiti"             , "PAPEE", "TA"),
+    ("Perth, Australia"            , "PERTH", ),
+    ("Portland, Oregon"            , "PORTL", "PT"),
+    ("Porto Alegre, Brazil"        , "PALEG", ),
+    ("Preston, England"            , "PREST", ),
+    ("Provo, Utah"                 , "PROVO", "PV"),
+    ("Quetzaltenango, Guatemala"   , "QUETZ", ),
+    ("Raleigh, North Carolina"     , "RALEI", ),
+    ("Recife, Brazil"              , "RECIF", ),
+    ("Redlands, California"        , "REDLA", ),
+    ("Regina, Saskatchewan"        , "REGIN", ),
+    ("Reno, Nevada"                , "RENO",  ),
+    ("Rexburg, Idaho"              , "REXBU", ),
+    ("Sacramento, California"      , "SACRA", ),
+    ("St. George, Utah"            , "SGEOR", "SG"),
+    ("St. Louis, Missouri"         , "SLOUI", ),
+    ("St. Paul, Minnesota"         , "SPMIN", ),
+    ("Salt Lake City, Utah"        , "SLAKE", "SL"),
+    ("San Antonio, Texas"          , "SANTO", ),
+    ("San Diego, California"       , "SDIEG", "SA"),
+    ("San Jose, Costa Rica"        , "SJOSE", ),
+    ("Santiago, Chile"             , "SANTI", "SN"),
     ("Santo Domingo, Dominican Republic" , "SDOMI", ),
-    ("Sao Paulo, Brazil"          , "SPAUL", "SP"),
-    ("Seattle, Washington"        , "SEATT", "SE"),
-    ("Seoul, South Korea"         , "SEOUL", "SO"),
-    ("Snowflake, Arizona"         , "SNOWF", ),
-    ("Spokane, Washington"        , "SPOKA", ),
-    ("Stockholm, Sweden"          , "STOCK", "ST"),
-    ("Suva, Fiji"                 , "SUVA",  ),
-    ("Sydney, Australia"          , "SYDNE", "SD"),
-    ("Taipei, Taiwan"             , "TAIPE", "TP"),
-    ("Tampico, Tamaulipas"        , "TAMPI", ),
-    ("The Hague, Netherlands"     , "HAGUE", ),
-    ("Tokyo, Japan"               , "TOKYO", "TK"),
-    ("Toronto, Ontario"           , "TORNO", "TR"),
-    ("Tuxtla Gutierrez, Chiapas"  , "TGUTI", ),
-    ("Vera Cruz, Vera Cruz"       , "VERAC", ),
-    ("Vernal, Utah"               , "VERNA", ),
-    ("Villahermosa, Tabasco"      , "VILLA", ),
-    ("Washington, D.C."           , "WASHI", "WA"),
-    ("Winter Quarters, Nebraska"  , "WINTE", ),
+    ("Sao Paulo, Brazil"           , "SPAUL", "SP"),
+    ("Seattle, Washington"         , "SEATT", "SE"),
+    ("Seoul, South Korea"          , "SEOUL", "SO"),
+    ("Snowflake, Arizona"          , "SNOWF", ),
+    ("Spokane, Washington"         , "SPOKA", ),
+    ("Stockholm, Sweden"           , "STOCK", "ST"),
+    ("Suva, Fiji"                  , "SUVA",  ),
+    ("Sydney, Australia"           , "SYDNE", "SD"),
+    ("Taipei, Taiwan"              , "TAIPE", "TP"),
+    ("Tampico, Mexico"             , "TAMPI", ),
+    ("Tegucigalpa, Honduras"       , "TEGUC", ),
+    ("The Hague, Netherlands"      , "HAGUE", ),
+    ("Tokyo, Japan"                , "TOKYO", "TK"),
+    ("Toronto, Ontario"            , "TORON", "TORNO", "TR"),
+    ("Tuxtla Gutierrez, Mexico"    , "TGUTI", ),
+    ("Twin Falls, Idaho"           , "TFALL", "TWINF"),
+    ("Vancouver, British Columbia" , "VANCO", ),
+    ("Veracruz, Mexico"            , "VERAC", ),
+    ("Vernal, Utah"                , "VERNA", ),
+    ("Villahermosa, Mexico"        , "VILLA", ),
+    ("Washington, D.C."            , "WASHI", "WA"),
+    ("Winter Quarters, Nebraska"   , "WINTE", "WQUAR"),
 
-#Other Places, Not temples.
-    ("Endowment House"            , "EHOUS", "EH"),
-    ("President's Office"         , "POFFI", ),
+# Other places.  Not temples.
+    ("Endowment House"             , "EHOUS", "EH"),
+    ("President's Office"          , "POFFI", "PO"),
+    ("Historian's Office"          , "HOFFI", "HO"),
+    ("Other"                       , "OTHER", ),
 )
 
 temple_codes = {}
